[project]
name = "workshop-airflow"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Cavalcanti",email = "rfontes86@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "apache-airflow>=3.0.6,<4.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
